# sqlite-ast

./: README.md  future.md  pyproject.toml  spec.md
.github/workflows/: test.yml
examples/: functions_used.py  output_columns.py  output_columns_bare.py  output_columns_cte.py  output_columns_star.py  parse_ast.py  parse_basic.py  parse_error.py  parse_json.py  tables_referenced.py
experiments/: analyze_query.py
python_sqlite_ast/: ast_nodes.py  parser.py
sqlite_ast/: __init__.py  ast_nodes.py  parser.py  tokenizer.py
tests/: test_ast_methods.py  test_python_sqlite_ast.py
