[project]
name = "sqlite-ast"
version = "0.1a0"
description = "Python library for parsing SQLite SELECT queries into an AST"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []

[dependency-groups]
dev = [
    "pytest",
    "sqlite-ast-conformance",
    "cogapp"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sqlite_ast"]


[project.urls]
Homepage = "https://github.com/simonw/sqlite-ast"
Changelog = "https://github.com/simonw/sqlite-ast/releases"
Issues = "https://github.com/simonw/sqlite-ast/issues"
CI = "https://github.com/simonw/sqlite-ast/actions"
